@@ -161,8 +161,7 @@ MODULES		=                   \
                   StropModule.obj   \
                   StructModule.obj  \
                   TimeModule.obj    \
-                  ThreadModule.obj  \
-                  YUVConvert.obj
+                  ThreadModule.obj
 
 # Omitted Modules (and Description/Reason):
   #
@@ -644,8 +643,6 @@ xxmodule.obj: abstract.h ceval.h classobject.h cobject.h complexobject.h \
 	 object.h objimpl.h pydebug.h pyerrors.h pyfpe.h pystate.h python.h \
 	 pythonrun.h rangeobject.h sliceobject.h stringobject.h sysmodule.h \
 	 traceback.h tupleobject.h
-
-yuvconvert.obj: yuv.h
 
 zlibmodule.obj: abstract.h ceval.h classobject.h cobject.h complexobject.h \
 	 pyconfig.h dictobject.h fileobject.h floatobject.h funcobject.h \
